# PhantomGuard

./: .env  .gitignore  LICENSE  README.md  handover_context.md  presentation_script.md  requirements.txt  run_demo.bat
backend/: config.py
backend/verifier/: llm_client.py  tool_verifier.py  url_verifier.py
demo_app/: run_demo.bat
demo_app/backend/: config.py  main.py
demo_app/backend/verifier/: llm_client.py  package_verifier.py  url_verifier.py
demo_app/data/: train.jsonl  val.jsonl
demo_app/frontend/: dashboard.py
demo_app/scripts/: prepare_dataset.py  simulate_agent.py  train.py  train_rocm.py
phantomguard_package/: README.md  pyproject.toml
phantomguard_package/phantomguard/: __init__.py  cli.py  config.py  daemon.py  proxy.py
phantomguard_package/phantomguard/notebooks/: embed_server.py
phantomguard_package/phantomguard/verifier/: __init__.py  llm_client.py  package_verifier.py  tool_verifier.py  url_verifier.py
scratch/: count_urls.py  evaluate_val_set.py  test_api.py
scratch/test_workspace/: .env  phantomguard_hook.bat
scripts/: prepare_dataset.py  train.py
