[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomguard-firewall"
version = "0.1.0"
description = "PhantomGuard: Real-time LLM Agent Trust Firewall & Security Interceptor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "streamlit>=1.27.0"
]

[project.scripts]
phantomguard = "phantomguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["phantomguard*"]
